# squeeze-kernel

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: portfolio_voltarget.py  quickstart.py
paper/: README.md
src/squeeze_kernel/: __init__.py  batch.py  estimator.py  kernels.py
tests/: conftest.py  golden_scenarios.py  test_adaptive_weights.py  test_batch.py  test_estimator.py  test_golden.py  test_kernels.py  test_metamorphic.py  test_min_obs.py  test_scalefree.py
tests/golden/: complete_blocks.npz  crisis_shock.npz  generate.py  high_concentration.npz  negative_blocks.npz  staggered_missing.npz
